# PDF-ChatBot

./: README.md  compose.yaml  pyproject.toml  requirements.txt  rough.ipynb
.github/: aws.yaml
app/: main.py
app/routes/: query.py  upload.py
backend/: .dockerignore  requirements.txt
backend/app/: main.py
backend/app/routes/: query.py
backend/app_data/db/5eba0556-51fc-4718-8a1f-5d64943b5a36/: index_metadata.pickle
backend/logger/: __init__.py
backend/rag/: BM25.py  cohere_reranker.py  embeddings.py  ingest.py  llm.py  loader.py  splitter.py  vectorstore.py
backend/utils/: config.py
evaluation/: eval.py
frontend/: app.py  requirements.txt
rag/: chain.py  embeddings.py  ensemble_retriever.py  ingest.py  loader.py  retriever.py  splitter.py
utils/: config.py
